Enable all TruffleString encoding iff jcodings module can be found.